# engine

./: .eslintrc.cjs  .gitignore  .taurignore  Cargo.toml  README.md  Taskfile.yml  package.json
project/: Cargo.toml  Taskfile.yml
project/src/: README.md  lib.rs
project/src/actions/: action.rs
project/src/components/: component.rs  component2.rs
project/src/engine/: README.md  prelude.rs
project/src/engine/scene/: start.rs
project/src/managers/: manager.rs
project/src/objects/: my_object.rs  player.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: .gitignore  Greet.svelte  README.md  init.ts  path.ts
src/lib/components/: InitModal.svelte
src/lib/utils/: index.ts  utils.ts  utils_nocheck.ts
src/routes/: +page.svelte  +page.ts  README.md  utils_nocheck.ts
