[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = {package = "engine_lib", path = "../library" }
wasm-bindgen = "0.2.84"

# for easy logging, actually remove this in the template folder
log = "0.4.6"
wasm-logger = "0.2.0"

[lib]
crate-type = ["cdylib", "rlib"]

